<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="12dp"
    android:gravity="center"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:src="@drawable/logolong2"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="15dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorBlack"
        android:textColor="@color/colorBlack"
        android:padding="10dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="15dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorBlack"
        android:textColor="@color/colorBlack"
        android:padding="10dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorBlack"
        android:textColor="@color/colorBlack"
        android:padding="10dp"
        android:autofillHints="" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorBlack"
        android:textColor="@color/colorBlack"
        android:padding="10dp"
        android:autofillHints="" />
    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_marginTop="15dp"
        android:text="@string/register"
        android:textColor="@color/colorBlack"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/login_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alredy_a_user_login"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="15dp"/>
</LinearLayout>